<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="#ffffff"
    tools:context=".BenchPressActivity">
<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collaspingToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="@color/colorPrimary"
        app:expandedTitleMarginBottom="20dp"
        app:expandedTitleMarginStart="15dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription=""
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/benchpressgif"
            app:layout_collapseMode="parallax" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:background="@drawable/title_background"/>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="Benchpress"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>


    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:id="@+id/ChestAreaTrained"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/AreaTrained"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="0.6"
                    android:text="@string/area_trained"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/middle_chest_pectoral_region"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="0.6"
                android:text="@string/description"
                android:textColor="@color/Black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/DesforBenchpress"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="0.6"
                android:text="@string/instructions"
                android:textColor="@color/Black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/instructionsstring"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="0.6"
                android:text="@string/MistakesTitle"
                android:textColor="@color/Black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/becnpressmistakes"
                android:textColor="@color/Black"
                android:textSize="18sp" />







        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
